[metadata]
name = AgriTeck-pkg-BehiguG
version = 0.0.1
author = Behigu Gizachew
author_email = be.gizachew@gmail.com
description = Simple python package for AgriTech internal use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/behigu/Satellite_Data_Analysis
project_urls =
    Bug Tracker = https://github.com/behigu/Satellite_Data_Analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src